--- a/Radio-button/package.json
+++ b/Radio-button/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "helloworld": "file:",
     "namor": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
